--- a/Blueberry/app/src/main/res/navigation/mobile_navigation.xml
+++ b/Blueberry/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,9 +7,9 @@
 
     <fragment
         android:id="@+id/navigation_option"
-        android:name="ssu.cheesecake.blueberry.ui.gallary.GallaryFragment"
-        android:label="@string/title_gallary"
-        tools:layout="@layout/fragment_gallary" />
+        android:name="ssu.cheesecake.blueberry.ui.option.Optionragment"
+        android:label="@string/title_option"
+        tools:layout="@layout/fragment_option" />
     <fragment
         android:id="@+id/navigation_list"
         android:name="ssu.cheesecake.blueberry.ui.list.ListFragment"
