--- a/Blueberry/app/src/main/res/layout/fragment_camera.xml
+++ b/Blueberry/app/src/main/res/layout/fragment_camera.xml
@@ -4,12 +4,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <com.example.android.camera2basic.AutoFitTextureView
-        android:id="@+id/texture"
+    <ssu.cheesecake.blueberry.AutoFitTextureView
+        android:id="@+id/CameraTextureView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true" />
+        android:layout_alignParentTop="true"/>
 
     <FrameLayout
         android:id="@+id/control"
@@ -17,8 +17,8 @@
         android:layout_height="112dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="0dp"
-        android:layout_marginBottom="4dp">
+        android:layout_below="@id/CameraTextureView"
+        android:background="#FFFFFF">
 
         <ImageButton
             android:id="@+id/cam2galleryButton"
@@ -29,12 +29,15 @@
             android:padding="20dp"
             android:src="@drawable/ic_launcher_foreground" />
 
-        <Button
+        <ImageButton
             android:id="@+id/takePictureButton"
+            style="@android:style/Widget.Material.Light.Button.Borderless"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="@string/take_picture" />
+            android:padding="20dp"
+            android:src="@drawable/ic_launcher_foreground" />
+
 
         <ImageButton
             android:id="@+id/IdontThinkAboutThisUsageYet"
