--- a/Blueberry/app/src/main/res/layout/activity_login.xml
+++ b/Blueberry/app/src/main/res/layout/activity_login.xml
@@ -4,13 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".LoginActivity">
 
     <Button
         android:id="@+id/intent_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Go to Next Activity"
+        android:text="@string/login_button"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
