--- a/Blueberry/app/src/main/res/layout/activity_recheck.xml
+++ b/Blueberry/app/src/main/res/layout/activity_recheck.xml
@@ -4,70 +4,147 @@
     android:layout_height="fill_parent"
     android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/business_card"
-        android:src="@drawable/testcard"
+
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="0.05"
-        />
+        android:paddingTop="50sp">
 
-    <TextView
-        android:id="@+id/textView1"
+        <ImageView
+            android:id="@+id/business_card"
+            android:layout_width="wrap_content"
+            android:layout_height="263dp"
+            android:layout_margin="20dp"
+            android:contentDescription="@string/recheck_image"
+            android:src="@drawable/testcard" />
+
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="이름을 선택하세요" />
+        android:layout_marginStart="60sp"
+        android:layout_marginTop="30sp"
+        android:layout_marginBottom="40sp"
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/recheck1_margin"
+            android:orientation="horizontal">
 
 
-    <Spinner
-        android:id="@+id/spinner1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
 
-    <TextView
-        android:id="@+id/textView2"
+
+            <TextView
+                android:id="@+id/textView1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/recheck_name"
+                android:textSize="@dimen/recheck1_question1"
+
+                />
+
+            <Spinner
+                android:id="@+id/spinner1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20sp" />
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/recheck1_margin"
+            android:orientation="horizontal">
+
+
+
+
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/recheck_phone"
+                android:textSize="@dimen/recheck1_question1" />
+
+            <Spinner
+                android:id="@+id/spinner2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/recheck1_margin"
+            android:orientation="horizontal">
+
+
+
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/recheck_company"
+                android:textSize="@dimen/recheck1_question1" />
+
+
+            <Spinner
+                android:id="@+id/spinner3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/recheck1_margin"
+            android:orientation="horizontal"
+
+            >
+
+            <TextView
+                android:id="@+id/textView4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/recheck_email"
+                android:textSize="@dimen/recheck1_question1" />
+
+            <Spinner
+                android:id="@+id/spinner4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+
+        </LinearLayout>
+
+
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="전화번호를 선택하시오"
-        />
+        android:layout_gravity="center"
+        android:layout_margin="@dimen/recheck1_margin">
 
-    <Spinner
-        android:id="@+id/spinner2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="회사명을 선택하시오" />
-
-    <Spinner
-        android:id="@+id/spinner3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="이메일을 선택하시오" />
-
-    <Spinner
-        android:id="@+id/spinner4"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        <Button
+            android:id="@+id/finishButton1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="onClick"
+            android:text="@string/recheck_next"
+            android:textSize="@dimen/recheck1_question1" />
 
 
-    <Button
-        android:id="@+id/finishButton1"
-        android:onClick="onClick"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="검토화면으로 넘어갑니다" />
-
-
-
-
+    </LinearLayout>
 
 </LinearLayout>
