--- a/Blueberry/app/src/main/res/values/dimens.xml
+++ b/Blueberry/app/src/main/res/values/dimens.xml
@@ -1,3 +1,6 @@
 <resources>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="recheck1_question1">20sp</dimen>
+    <dimen name="recheck1_margin">10sp</dimen>
+    <dimen name="recheck2_question1">20sp</dimen>
 </resources>
