--- a/Blueberry/app/src/main/res/layout/fragment_camera.xml
+++ b/Blueberry/app/src/main/res/layout/fragment_camera.xml
@@ -10,6 +10,10 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"/>
+    <SurfaceView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/surfaceView"/>
 
     <FrameLayout
         android:id="@+id/control"
