--- a/Blueberry/app/src/main/res/layout/fragment_camera.xml
+++ b/Blueberry/app/src/main/res/layout/fragment_camera.xml
@@ -4,54 +4,55 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="90dp"
+        android:orientation="horizontal"
+        android:background="#FFFFFF"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:id="@+id/camera_menu_bar"/>
+
     <ssu.cheesecake.blueberry.AutoFitTextureView
         android:id="@+id/CameraTextureView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"/>
+        android:layout_below="@+id/camera_menu_bar"/>
     <SurfaceView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_below="@+id/camera_menu_bar"
         android:id="@+id/surfaceView"/>
 
-    <FrameLayout
+    <LinearLayout
         android:id="@+id/control"
         android:layout_width="match_parent"
-        android:layout_height="112dp"
+        android:layout_height="200dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
         android:layout_below="@id/CameraTextureView"
-        android:background="#FFFFFF">
+        android:background="#FFFFFF"
+        android:orientation="vertical">
 
-        <ImageButton
-            android:id="@+id/cam2galleryButton"
-            style="@android:style/Widget.Material.Light.Button.Borderless"
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical|left"
-            android:padding="20dp"
-            android:src="@drawable/ic_launcher_foreground" />
+            android:text="명함을 사각형 안에 맞춰서 촬영해 주세요"
+            android:textSize="20dp"
+            android:layout_gravity="center"/>
+
 
         <ImageButton
             android:id="@+id/takePictureButton"
             style="@android:style/Widget.Material.Light.Button.Borderless"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
             android:layout_gravity="center"
-            android:padding="20dp"
-            android:src="@drawable/ic_launcher_foreground" />
+            android:padding="22dp"
+            android:scaleType="fitCenter"
+            android:src="@drawable/camera_capture_btn_black" />
 
 
-        <ImageButton
-            android:id="@+id/IdontThinkAboutThisUsageYet"
-            style="@android:style/Widget.Material.Light.Button.Borderless"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical|right"
-            android:padding="20dp"
-            android:src="@drawable/ic_launcher_foreground" />
-
-    </FrameLayout>
+    </LinearLayout>
 
 </RelativeLayout>
