--- a/Blueberry/app/src/main/res/layout/activity_re_check.xml
+++ b/Blueberry/app/src/main/res/layout/activity_re_check.xml
@@ -1,32 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:orientation="vertical">
 
-
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="50sp">
+        android:baselineAligned="true"
+        android:gravity="top|center_horizontal"
+        android:orientation="horizontal"
+        android:paddingTop="10sp">
 
         <ImageView
             android:id="@+id/business_card"
             android:layout_width="wrap_content"
-            android:layout_height="100dp"
+            android:layout_height="wrap_content"
             android:layout_margin="20dp"
+            android:layout_marginTop="150dp"
             android:adjustViewBounds="true"
             android:contentDescription="@string/recheck_image"
+            android:maxHeight="263dp"
             android:src="@drawable/testcard" />
 
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="60sp"
+        android:layout_marginStart="30sp"
+        android:layout_marginEnd="30sp"
         android:layout_marginTop="30sp"
-        android:layout_marginBottom="40sp"
+        android:layout_marginBottom="10sp"
         android:orientation="vertical">
 
         <LinearLayout
@@ -34,9 +39,6 @@
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/recheck1_margin"
             android:orientation="horizontal">
-
-
-
 
             <TextView
                 android:id="@+id/textView1"
@@ -83,7 +85,6 @@
 
 
         </LinearLayout>
-
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -136,23 +137,24 @@
 
         </LinearLayout>
 
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_margin="@dimen/recheck1_margin">
-
-        <Button
-            android:id="@+id/finishButton1"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/recheck_next"
-            android:textSize="@dimen/recheck1_question1" />
+            android:layout_gravity="center"
+            android:layout_margin="@dimen/recheck1_margin">
+
+            <Button
+                android:id="@+id/finishButton1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/recheck_next"
+                android:textSize="@dimen/recheck1_question1" />
+
+
+        </LinearLayout>
 
 
     </LinearLayout>
+
 
 </LinearLayout>
