--- a/Blueberry/app/src/main/res/layout/activity_re_check2.xml
+++ b/Blueberry/app/src/main/res/layout/activity_re_check2.xml
@@ -31,9 +31,10 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="30sp"
+        android:layout_marginEnd="30sp"
         android:layout_marginTop="30sp"
         android:layout_marginBottom="10sp"
         android:orientation="vertical">
