--- a/Blueberry/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/Blueberry/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,22 +2,23 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/navigation_list"
+        android:id="@+id/navigation_button_list"
         android:icon="@drawable/icon_list"
         android:title="@string/title_list" />
 
     <item
-        android:id="@+id/navigation_camera"
+        android:id="@+id/navigation_button_camera"
         android:icon="@drawable/icon_camera"
         android:title="@string/title_camera" />
 
     <item
-        android:id="@+id/navigation_gallery"
+        android:id="@+id/navigation_button_gallery"
         android:icon="@drawable/icon_gallery"
         android:title="@string/title_gallery" />
 
     <item
-        android:id="@+id/navigation_option"
+        android:id="@+id/navigation_button_option"
         android:icon="@drawable/icon_option"
         android:title="@string/title_option" />
+
 </menu>
