--- a/Blueberry/app/src/main/res/values/dimens.xml
+++ b/Blueberry/app/src/main/res/values/dimens.xml
@@ -8,4 +8,9 @@
     <dimen name="recheck1_question1">20sp</dimen>
     <dimen name="recheck1_margin">10sp</dimen>
     <dimen name="recheck2_question1">20sp</dimen>
+    <dimen name="activity_login_box_horizontal">35dp</dimen>
+    <dimen name="activity_login_box_vertical">45dp</dimen>
+    <dimen name="activity_login_box_border">10dp</dimen>
+    <dimen name="activity_login_blueberrySize">120dp</dimen>
+    <dimen name="activity_loginButtonSize">10dp</dimen>
 </resources>
