--- a/Blueberry/app/src/main/res/layout/activity_re_check.xml
+++ b/Blueberry/app/src/main/res/layout/activity_re_check.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_weight="100"
     android:orientation="vertical">
 
     <LinearLayout
@@ -136,21 +137,22 @@
 
         </LinearLayout>
 
-        <LinearLayout
+
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_margin="@dimen/recheck1_margin">
+
+        <Button
+            android:id="@+id/finishButton1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_margin="@dimen/recheck1_margin">
-
-            <Button
-                android:id="@+id/finishButton1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/recheck_next"
-                android:textSize="@dimen/recheck1_question1" />
-
-
-        </LinearLayout>
+            android:text="@string/recheck_next"
+            android:textSize="@dimen/recheck1_question1" />
 
 
     </LinearLayout>
