--- a/Blueberry/app/src/main/res/layout/activity_re_check.xml
+++ b/Blueberry/app/src/main/res/layout/activity_re_check.xml
@@ -2,16 +2,59 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_weight="100"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/colorBlueBerry1"
+    >
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:layout_marginLeft="@dimen/activity_recheck_title_horizontal"
+        android:layout_marginRight="@dimen/activity_recheck_title_horizontal"
+        android:orientation="vertical"
+        >
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/nanumsquare"
+            android:text="@string/recheck_title"
+            android:textSize="25sp"
+            android:textColor="@color/colorWhite"
+            android:layout_marginStart="5dp"
+            />
+
+        <View
+            android:background="@color/colorWhite"
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:layout_marginTop="10dp"
+            />
+
+        <TextView
+            android:layout_marginTop="5dp"
+            android:textColor="@color/colorWhite"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/recheck_guiding"
+            android:textSize="12sp"
+            android:layout_marginStart="5dp"
+            />
+
+
+
+    </LinearLayout>
+
+
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:baselineAligned="true"
         android:gravity="top|center_horizontal"
         android:orientation="horizontal"
-        android:paddingTop="10sp">
+        android:paddingTop="8dp">
 
         <ImageView
             android:id="@+id/business_card"
@@ -20,51 +63,43 @@
             android:layout_margin="20dp"
             android:adjustViewBounds="true"
             android:contentDescription="@string/imageFile"
-            android:maxHeight="263dp"
-            android:src="@drawable/testcard" />
+            android:src="@drawable/testcard"
+            android:background="@drawable/borderimage"
+            />
 
     </LinearLayout>
 
-    <LinearLayout
+    <GridLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="30sp"
-        android:layout_marginEnd="30sp"
-        android:layout_marginTop="30sp"
-        android:layout_marginBottom="10sp"
-        android:orientation="vertical">
+        android:layout_margin="20dp"
+        android:background="@drawable/borderselection"
+        android:columnCount="2"
+        android:rowCount="4"
+        android:orientation="horizontal">
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/recheck1_margin"
-            android:orientation="horizontal">
+
 
             <TextView
                 android:id="@+id/textView1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/recheck_name"
+                android:textColor="@color/colorWhite"
                 android:textSize="@dimen/recheck1_question1"
+                android:layout_margin="@dimen/activity_recheck12_selectionMargin"
 
                 />
 
             <Spinner
                 android:id="@+id/spinner1"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20sp"
                 android:entries="@array/recheck_name"
                 />
 
 
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/recheck1_margin"
-            android:orientation="horizontal">
 
 
 
@@ -74,23 +109,17 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/recheck_phone"
-                android:textSize="@dimen/recheck1_question1" />
+                android:textColor="@color/colorWhite"
+                android:textSize="@dimen/recheck1_question1"
+                android:layout_margin="@dimen/activity_recheck12_selectionMargin"
+                />
 
             <Spinner
                 android:id="@+id/spinner2"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:entries="@array/recheck_phone"
                 />
-
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/recheck1_margin"
-            android:orientation="horizontal">
 
 
 
@@ -99,47 +128,41 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/recheck_company"
-                android:textSize="@dimen/recheck1_question1" />
+                android:textColor="@color/colorWhite"
+                android:textSize="@dimen/recheck1_question1"
+                android:layout_margin="@dimen/activity_recheck12_selectionMargin"
+                />
 
 
             <Spinner
                 android:id="@+id/spinner3"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:entries="@array/recheck_company"
                 />
-
-        </LinearLayout>
-
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/recheck1_margin"
-            android:orientation="horizontal"
-
-            >
 
             <TextView
                 android:id="@+id/textView4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/recheck_email"
-                android:textSize="@dimen/recheck1_question1" />
+                android:textColor="@color/colorWhite"
+                android:textSize="@dimen/recheck1_question1"
+                android:layout_margin="@dimen/activity_recheck12_selectionMargin"
+                />
 
             <Spinner
                 android:id="@+id/spinner4"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:entries="@array/recheck_address"
                 />
 
 
-        </LinearLayout>
 
 
 
-    </LinearLayout>
+    </GridLayout>
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -152,7 +175,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/recheck_next"
-            android:textSize="@dimen/recheck1_question1" />
+            android:textSize="@dimen/recheck1_question1"
+            />
 
 
     </LinearLayout>
