--- a/Blueberry/app/src/main/res/layout/activity_re_check2.xml
+++ b/Blueberry/app/src/main/res/layout/activity_re_check2.xml
@@ -6,7 +6,50 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".ReCheck2"
+    android:background="@color/colorBlueBerry1"
     >
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:layout_marginLeft="@dimen/activity_recheck_title_horizontal"
+        android:layout_marginRight="@dimen/activity_recheck_title_horizontal"
+        android:orientation="vertical"
+        >
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/nanumsquare"
+            android:text="@string/recheck2_title"
+            android:textSize="25sp"
+            android:textColor="@color/colorWhite"
+            android:layout_marginStart="5dp"
+            />
+
+        <View
+            android:background="@color/colorWhite"
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:layout_marginTop="10dp"
+            />
+
+        <TextView
+            android:layout_marginTop="5dp"
+            android:textColor="@color/colorWhite"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/recheck_guiding"
+            android:textSize="12sp"
+            android:layout_marginStart="5dp"
+            />
+
+
+
+    </LinearLayout>
+
+
 
 
     <LinearLayout
@@ -26,6 +69,7 @@
             android:adjustViewBounds="true"
             android:contentDescription="@string/imageFile"
             android:maxHeight="263dp"
+            android:background="@drawable/borderimage"
             android:src="@drawable/testcard" />
 
     </LinearLayout>
@@ -53,6 +97,7 @@
                 android:layout_height="wrap_content"
                 android:importantForAutofill="no"
                 android:text="@string/recheck2_name2"
+                android:textColor="@color/colorWhite"
                 tools:targetApi="o" />
 
             <EditText
@@ -80,6 +125,7 @@
                 android:id="@+id/phone_confirm2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textColor="@color/colorWhite"
                 android:text="@string/recheck2_phone2" />
 
 
@@ -111,6 +157,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:importantForAutofill="no"
+                android:textColor="@color/colorWhite"
                 android:text="@string/recheck2_mail2"
                 tools:targetApi="o" />
 
@@ -141,6 +188,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:importantForAutofill="no"
+                android:textColor="@color/colorWhite"
                 android:text="@string/recheck2_company2"
                 tools:targetApi="o" />
 
@@ -166,6 +214,7 @@
         android:layout_gravity="center"
         android:layout_margin="@dimen/recheck1_margin"
         android:baselineAligned="true"
+
         android:orientation="horizontal">
 
         <Button
