--- a/Blueberry/app/src/main/res/values/styles.xml
+++ b/Blueberry/app/src/main/res/values/styles.xml
@@ -20,4 +20,9 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="CustomButton" parent="@style/Theme.MaterialComponents.Light.DarkActionBar">
+
+
+    </style>
+
 </resources>
