--- a/Blueberry/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/Blueberry/app/src/main/res/menu/bottom_nav_menu.xml
@@ -8,6 +8,7 @@
         android:icon="@drawable/icon_list"
         android:title="@string/title_list" />
 
+    <!--
     <item
         android:id="@+id/navigation_button_camera"
         android:icon="@drawable/icon_camera"
@@ -17,6 +18,11 @@
         android:id="@+id/navigation_button_gallery"
         android:icon="@drawable/icon_gallery"
         android:title="@string/title_gallery" />
+    -->
+    <item
+        android:id="@+id/navigation_button_create"
+        android:icon="@drawable/icon_add"
+        android:title="Create" />
 
     <item
         android:id="@+id/navigation_button_option"
