--- a/Blueberry/app/src/main/res/layout/fragment_camera.xml
+++ b/Blueberry/app/src/main/res/layout/fragment_camera.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <!--
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="90dp"
@@ -12,16 +13,17 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:id="@+id/camera_menu_bar"/>
+        android:layout_below="@+id/camera_menu_bar"
+        android:layout_below="@+id/camera_menu_bar"/>
+        -->
 
     <ssu.cheesecake.blueberry.AutoFitTextureView
         android:id="@+id/CameraTextureView"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/camera_menu_bar"/>
+        android:layout_height="wrap_content"/>
     <SurfaceView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/camera_menu_bar"
         android:id="@+id/surfaceView"/>
 
     <LinearLayout
