--- a/Blueberry/app/src/main/res/layout/activity_camera.xml
+++ b/Blueberry/app/src/main/res/layout/activity_camera.xml
@@ -6,4 +6,4 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#000"
-    tools:context="ssu.cheesecake.blueberry.CameraActivity" />
+    tools:context="ssu.cheesecake.blueberry.camera.CameraActivity" />
