사진 사이즈에 관계없이 frame layout의 center

--- a/Blueberry/app/src/main/res/layout/activity_smartcrop.xml
+++ b/Blueberry/app/src/main/res/layout/activity_smartcrop.xml
@@ -13,8 +13,9 @@
 
         <me.pqpo.smartcropperlib.view.CropImageView
             android:id="@+id/iv_crop"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center" />
 
     </FrameLayout>
 
