--- a/Blueberry/app/src/main/res/values/colors.xml
+++ b/Blueberry/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#D81B60</color>
     <color name="colorBlueBerry1">#9377BB</color>
     <color name="colorWhite">#FFFFFF</color>
+    <color name="colorYellow">#FFFF00</color>
 </resources>
