--- a/Blueberry/app/src/main/res/layout/fragment_list.xml
+++ b/Blueberry/app/src/main/res/layout/fragment_list.xml
@@ -10,6 +10,26 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <EditText
+                android:id="@+id/edit_text_search"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:autofillHints="검색어를 입력하세요"
+                android:inputType="text" />
+            <Button
+                android:id="@+id/button_search"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="검색" />
+
+        </LinearLayout>
+
         <Button
             android:id="@+id/add_button"
             android:layout_width="match_parent"
@@ -24,11 +44,11 @@
             android:layout_weight="1">
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recyclerView"
+                android:id="@+id/recyclerView_list"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
         </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
-        >
+
     </LinearLayout>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
