--- a/Blueberry/app/src/main/res/layout/list_item.xml
+++ b/Blueberry/app/src/main/res/layout/list_item.xml
@@ -35,6 +35,7 @@
                 android:orientation="vertical">
 
                 <ImageView
+                    android:id="@+id/item_button_favorite_imageview"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
