--- a/Blueberry/app/src/main/res/values/styles.xml
+++ b/Blueberry/app/src/main/res/values/styles.xml
@@ -25,4 +25,11 @@
 
     </style>
 
+    <style name="CustomPopupAnimation" mce_bogus="1" parent="android:Animation">
+        <item name="android:windowEnterAnimation">@anim/custom_anim_from_top</item>
+        <item name="android:windowExitAnimation">@anim/custom_anim_to_top</item>
+    </style>
+
+
+
 </resources>
